--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         
-        <title>Diateck - DAILY DIET TRACKING</title>
+        <title>Dietack - DAILY DIET TRACKING</title>
         
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -157,7 +157,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h4><strong>Diateck</strong>
+                        <h4><strong>Dietack</strong>
                         </h4>
                         <p>Fellin Roberto</p>
                         <p>Magnago Enrico</p>
@@ -180,7 +180,7 @@
                             </li>
                         </ul>
                         <hr class="small">
-                        <p class="text-muted">Copyright &copy; Diateck</p>
+                        <p class="text-muted">Copyright &copy; Dietack</p>
                     </div>
                 </div>
             </div>
