--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,20 +79,21 @@
                             <div class="row c">
                                 <div class="col-md-5">
                                     <a href="#">
-                                        <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                                        <img class="img-responsive" src="img/corsa.png" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-3">
-                                    <h3>Project One</h3>
-                                    <h4>Subheading</h4>
-                                    <p>Lorem ipsum dolor sit amet, coore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                                </div>
+                                   <h3 id="nomeAttività">Corsa</h3>
+                <h4>Km da percorrere: <span id="tot">5 km</span></h4>
+                <h4>Calorie teoriche smaltite: <span id="tot">360 KCal</span></h4>
+                <p>Descrizione Attività:  <span id="descRicetta">corsa libera moderata.</span></p>
+                </div>
                                 <div class="col-md-2">
                                     <br>
                                     <br>
                                     <br>
                                     <br>
-                                    <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                                    <a class="btn btn-primary" href="page/buonaattivitafisica.html">Accetta <span class="glyphicon glyphicon-chevron-right"></span></a>
                                 </div>
                             </div>
                             
