--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -101,7 +101,7 @@
                                     <br>
                                     <br>
                                     <br>
-                                    <a class="btn btn-primary" href="page/buonaattivitafisica.html">Accetta <span class="glyphicon glyphicon-chevron-right"></span></a>
+                                    <a class="btn btn-primary" href="page/buonappetito.html">Accetta <span class="glyphicon glyphicon-chevron-right"></span></a>
                                 </div>
                             </div>
                             
@@ -151,7 +151,7 @@
                                     <br>
                                     <br>
                                     <br>
-                                    <a class="btn btn-primary" href="page/buonaattivitafisica.html">Accetta <span class="glyphicon glyphicon-chevron-right"></span></a>
+                                    <a class="btn btn-primary" href="page/buonappetito.html">Accetta <span class="glyphicon glyphicon-chevron-right"></span></a>
                                 </div>
                             </div>
                             
